add token controller
