# crm-api/Models/LoginRequest.cs
@@ -1,0 +1,8 @@
+namespace crm_api.Models
+{
+    public class LoginRequest
+    {
+        public string UserName { get; set; }
+        public string Pasword { get; set; }
+    }
+}
